init profile